Fix horizontal scroll bar

--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -2,6 +2,10 @@
 
 @import "gravityforms";
 
+body {
+    overflow-x: hidden;
+}
+
 /*
 * === SITE ELEMENTS ===
 */
